--- a/260106.ipynb
+++ b/260106.ipynb
@@ -1073,7 +1073,9 @@
     "1. map(function, iterable)\n",
     "* iterable의 아이템을 function에 인자로 전달\n",
     "* function 파라미터 개수와 iterable 개수가 같아야 함\n",
-    "* 결과: map 타입"
+    "* 결과: map 타입\n",
+    "* 파이썬 자체가 메모리에 값을 직접 던지는 게 아니라 주소값만 저장하기 때문에 하나씩 순회하는 것은 시간이 걸릴 수 있어 map같은 함수를 제공해줌\n",
+    "그래서 map type을 출력하면 메모리값이 출력 -> list()로 변환해서 출력을 하는 것이 필요함"
    ]
   },
   {
@@ -1110,26 +1112,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "c5521672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 -6 100 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실수를 가까운 정수값으로 변환하기\n",
+    "# map을 사용하지 않는다면 for문으로 하나하나 형변환을 해줘야 하겠지만 \n",
+    "# map을 이용하면 한 번에 변환 가능 \n",
+    "f = (3.14, -5.625, 100.4, 25.8)\n",
+    "# i = list(map(round, f))\n",
+    "# i\n",
+    "print(*map(round, f)) # * = unpacking 연산자, 객체를 list로 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfcd9f6",
+   "metadata": {},
+   "source": [
+    "zip 함수\n",
+    "* 각 iterable의 동일 인덱스의 item들을 튜플 쌍으로 변환\n",
+    "* 결과는 zip 타입"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "93ab5986",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(52, 19, 0), (255, 63, 68), (39, 227, 255), (132, 197, 187)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#이미지 색상별 데이터를 묶어서 24bpp RGB이미지 만들기\n",
+    "r = (52, 255, 39, 132)\n",
+    "g = (19, 63, 227, 197)\n",
+    "b = (0, 68, 255, 187)\n",
+    "img = list(zip(r,g,b))\n",
+    "print(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22673b53",
+   "metadata": {},
+   "source": [
+    "enumerate 함수\n",
+    "* 딕셔너리 같이 순서가 없는 데이터를 순번과 함께 출력해야 하는 경우 \n",
+    "* enumerate(iterable, [start=0])\n",
+    "* 결과는 enumerate 타입\n",
+    "* (idx, value)의 튜플 쌍을 생성하게 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43cfad4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'apple', 2: 'orange', 3: 'banana', 4: 'mango'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 과일 품목 별로 일련 번호 부여하기\n",
+    "f = ('apple', 'orange', 'banana','mango')\n",
+    "tag=dict(enumerate(f, 1)) \n",
+    "print(tag)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad05f83",
+   "metadata": {},
+   "source": [
+    "filter 사용하기\n",
+    "* 조건에 맞는 요소만 골라내기\n",
+    "* True일 때만 해당 요소 가져옴\n",
+    "* filter(함수, 이터러블)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "460aa258",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, -6, 100, 26]"
+       "[8, 7, 9]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 실수를 가까운 정수값으로 변환하기\n",
-    "f = (3.14, -5.625, 100.4, 25.8)\n",
-    "i = list(map(round, f))\n",
-    "i"
+    "def f(x):\n",
+    "    return x>5 and x<10\n",
+    "a=[8,3,2,10,15,7,1,9,0,11]\n",
+    "list(filter(f,a))"
    ]
   },
   {
@@ -1210,6 +1313,582 @@
     "add_many(1,2,3)\n",
     "add_many(1, -2, -3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "89cfefc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_many(*args):\n",
+    "    sum=0\n",
+    "    for i in  args:\n",
+    "        sum += i\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "3a475327",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_many(1,2,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12ca608",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 여러 기능을 선택해서 사용\n",
+    "def add_mul(mode, *args): #mode는 고정인자, args는 가변인자\n",
+    "    if mode=='add':\n",
+    "        result=0\n",
+    "        for i in args:\n",
+    "            result += i\n",
+    "            return result #return(단 함수 종료)이 여러개 있어도 괜찮음.\n",
+    "    elif mode=='mul':\n",
+    "        result=1\n",
+    "        for i in args:\n",
+    "            result*=i\n",
+    "    else:\n",
+    "        print('연산자 종류 확인 요망')\n",
+    "        result=None\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "074aee69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_mul('add', 1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "5a380b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_mul('mul', 1,2,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23afb6af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_and_mul(a,b):\n",
+    "    return a+b, a*b #튜플의 형태로 리턴해줌 괄호를 생략해도 튜플이 되기 때문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5be5dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result1, result2 = add_and_mul(3,4) #여러 개 값을 받을 수 있음 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "07c832b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5dc7b2c",
+   "metadata": {},
+   "source": [
+    "매개변수 초기화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2c4253c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#매개변수 초기화\n",
+    "def say_myself(name, age, man=True):\n",
+    "    print(f'내 이름은 {name}이고 {age}살이야')\n",
+    "    if man:\n",
+    "        print('남자')\n",
+    "    else:\n",
+    "        print('여자')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5b4ded30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "내 이름은 박지민이고 31살이야\n",
+      "남자\n",
+      "내 이름은 박지민이고 31살이야\n",
+      "여자\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_myself('박지민', 31)\n",
+    "say_myself('박지민', 31, man=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03c6041",
+   "metadata": {},
+   "source": [
+    "인자\n",
+    "* 고정인자\n",
+    "* 가변인자\n",
+    "* 키워드 가변인자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "993874a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def complex_func(a,b,*args, **kwargs):\n",
+    "    print('고정인자', a, b)\n",
+    "    print('가변인자', args) #튜플이 됨\n",
+    "    print('키워드인자', kwargs) #딕셔너리로 전달"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6a56afeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "고정인자 1 2\n",
+      "가변인자 (3, 4, 5)\n",
+      "키워드인자 {'name': '박지민', 'age': 32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "complex_func(1,2,3,4,5, name='박지민', age=32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a6a291",
+   "metadata": {},
+   "source": [
+    "함수/변수의 효력 범위"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7faa9789",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "def v(a):\n",
+    "    a += 1\n",
+    "v(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a90d1987",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m     b+=\u001b[32m1\u001b[39m\n\u001b[32m      3\u001b[39m v(\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mb\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'b' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def v(b):\n",
+    "    b+=1\n",
+    "v(3) # 리턴을 안하기 대문에 그냥 날아가게 됨\n",
+    "print(b)\n",
+    "#error!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bff159c1",
+   "metadata": {},
+   "source": [
+    "함수 안에서 함수 밖 변수를 변경하는 방법\n",
+    "1. return 사용 (추천)\n",
+    "2. global 변수 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87fa1068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "def v(a):\n",
+    "    a+=1\n",
+    "    return a\n",
+    "a = v(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ad4c00a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "def v(): \n",
+    "    global a #단 글로벌 변수는 인자 이름으로 사용이 안 됨\n",
+    "    a+=1\n",
+    "v()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30893a7a",
+   "metadata": {},
+   "source": [
+    "람다 함수(익명함수)\n",
+    "* 한 번만 간단하게, 1회성 작업\n",
+    "* 코드의 간결함, 메모리의 절약 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4c406ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 23, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# def add_one 람다함수로 작성해보기\n",
+    "myList =[1,22,3,4,5,6]\n",
+    "res = map(lambda x:x+1, myList)\n",
+    "list(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "bd0287b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda x,y: x+y #이렇게도 쓸 수 있다\n",
+    "print(f(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ec839763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#람다\n",
+    "#map(함수, 이터러블)\n",
+    "numbers = [1,2,3,4]\n",
+    "squared = list(map(lambda x:x**2, numbers))\n",
+    "print(squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6ab6374c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#필터링 짝수만\n",
+    "#filter(function, iterable)  #단 function은 True/False를 리턴\n",
+    "numbers = [1,2,3,4]\n",
+    "even_numbers = list(filter(lambda x:x%2==0, numbers))\n",
+    "even_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d644513c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, 1), (1, 2), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sorted\n",
+    "points = [(1,2), (3,4), (5,1)]\n",
+    "sorted_points = sorted(points, key=lambda x:x[1]) # x[1]=각 튜플의 마지막 요소\n",
+    "#기준 한 개만 key로 등록해주면 됨\n",
+    "print(sorted_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d45267",
+   "metadata": {},
+   "source": [
+    "sorted vs sort\n",
+    "* sorted\n",
+    "    - 정렬된 결과를 반환\n",
+    "    - sorted_list = sorted(mylist)\n",
+    "* sort\n",
+    "    - 원본을 변형\n",
+    "    - mylist.sort()\n",
+    "    \n",
+    "-> 공통 파라미터\n",
+    "1. reverse = True / False\n",
+    "2. key = \n",
+    "    - 람다 사용 가능 \n",
+    "    - 이 키값을 기준으로 정렬\n",
+    "    - 한 가지 예시만 키값에 넣어주면 그 기준에 맞춰 정렬 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad8d52ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sorted\n",
+    "my_list = [3, 1, 4, 1, 5, 9, 2]\n",
+    "sorted_list = sorted(my_list)  # 오름차순 정렬\n",
+    "print(sorted_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "54376ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 4, 5, 9]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sort\n",
+    "my_list = [3, 1, 4, 1, 5, 9, 2]\n",
+    "my_list.sort()\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "643e86c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "기본 정렬 ['good_morning', 'niceday', '굿모닝', '좋은하루']\n",
+      "길이로 정렬 ['굿모닝', '좋은하루', 'niceday', 'good_morning']\n",
+      "두번째 글자로 정렬 ['niceday', 'good_morning', '굿모닝', '좋은하루']\n",
+      "두 번째 요소 기준 정렬:\n",
+      " [('좋은하루', 0), ('niceday', 1), ('good_morning', 3), ('좋은하루', 5), ('niceday', 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#key 값\n",
+    "str_list = ['좋은하루','good_morning','굿모닝','niceday']\n",
+    "print('기본 정렬', sorted(str_list))\n",
+    "str_list = ['좋은하루','good_morning','굿모닝','niceday']\n",
+    "print('길이로 정렬', sorted(str_list, key=len))\n",
+    "print('두번째 글자로 정렬', sorted(str_list, key=lambda x:x[1]))\n",
+    "#여러 개의 요소를 가진 경우\n",
+    "tuple_list = [('좋은하루', 0),\n",
+    "    \t          ('niceday', 1), \n",
+    "    \t          ('좋은하루', 5), \n",
+    "    \t          ('good_morning', 3), \n",
+    "    \t          ('niceday',5)]\n",
+    "print('두 번째 요소 기준 정렬:\\n'\n",
+    "      ,sorted(tuple_list, key=lambda x:x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e7d4cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
