미션 코드 추가

--- a/missionDay2.ipynb
+++ b/missionDay2.ipynb
@@ -345,7 +345,29 @@
    "execution_count": null,
    "id": "bb3530bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사용자: 가위, 컴퓨터: 가위\n",
+      "사용자: 바위, 컴퓨터: 바위\n",
+      "사용자: 보, 컴퓨터: 가위\n",
+      "사용자: 가위, 컴퓨터: 가위\n",
+      "사용자: 바위, 컴퓨터: 바위\n",
+      "사용자: 보, 컴퓨터: 보\n",
+      "사용자: Escape, 컴퓨터: 바위\n",
+      "사용자: , 컴퓨터: 보\n",
+      "사용자: , 컴퓨터: 바위\n",
+      "사용자: , 컴퓨터: 가위\n",
+      "사용자: , 컴퓨터: 가위\n",
+      "사용자: , 컴퓨터: 바위\n",
+      "사용자: , 컴퓨터: 보\n",
+      "사용자: , 컴퓨터: 가위\n",
+      "사용자: , 컴퓨터: 가위\n"
+     ]
+    }
+   ],
    "source": [
     "#17\n",
     "#가위바위보 게임 만들기\n",
@@ -375,6 +397,39 @@
     "            continue\n",
     "        else:\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d988cc80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.0\n",
+      "70.0\n",
+      "55.0\n",
+      "65.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18\n",
+    "#등수구하기\n",
+    "# [[80, 70], [90, 50], [40, 70], [50, 80]] -> [1, 2, 4, 3] \n",
+    "# [[80, 70], [70, 80], [30, 50], [90, 100], [100, 90], [100, 100], [10, 30]] -> \n",
+    "# [4, 4, 6, 2, 2, 1, 7]\n",
+    "# score = input('영어, 수학 점수 리스트를 입력하세요')\n",
+    "score = [[80, 70], [90, 50], [40, 70], [50, 80]]\n",
+    "average_score=[]\n",
+    "for s in score:\n",
+    "    average_score=(s[0]+s[1])/2\n",
+    "    print(average_score)\n",
+    "for curr, next in zip(average_score, average_score[1:]):\n",
+    "    if curr > next:"
    ]
   }
  ],
