data 파일 경로 수정

--- a/data_analysis/1_달탐사_미션.ipynb
+++ b/data_analysis/1_달탐사_미션.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1718683920480
@@ -32,9 +32,9 @@
       "outputs": [],
       "source": [
         "# 데이터 파일을 읽어오기\n",
-        "rock_samples = pd.read_csv(r'.\\data_0109\\rocksamples.csv')\n",
-        "# ('.\\\\data_0109\\\\rocksamples.csv')\n",
-        "# ('./data_0109/rocksamples.csv')"
+        "rock_samples = pd.read_csv(r'.\\data_0109-0113\\rocksamples.csv')\n",
+        "# ('.\\\\data_0109-0113\\\\rocksamples.csv')\n",
+        "# ('./data_0109-0113/rocksamples.csv')"
       ]
     },
     {
